--- a/first_webpage/index.html
+++ b/first_webpage/index.html
@@ -12,7 +12,7 @@
     <p>Kindly do what you see here as it would affect your score <br>Whether it is your first webpage in life or not, use the heading above, it won't bite..</p>
 
     <h2>H2 Heading</h2>
-    <p>As best practice, your webpage should have just one <h1></h1> element</p>
+    <p>As best practice, your webpage should have just one &lth1&gt &lt/h1&gt element</p>
 
     <h3>h3 Heading</h3>
     <p>This test is too simple to fail.<br>It is simply a test of how much you have been following the course</p>
